# ArtificialIntelligenceDemo

./: .gitignore  CvDemos.py  DPData.csv  Mathematics.py  NeuralDemos.py  README.md  Requirements.txt  TorchCudaWin.bat  test.py
Basics/: BunchUnzip.py  DownloadDatasets1.py  MakeVideo.py
Cv/: CornerDetection.py  LucasKanadeOpticalFlow.py
Cv/Basics/: ChannelsMerge.py  ChannelsSplits.py  ConcatenateImages.py  CropAnImage.py  Transforms.py
Cv/CvTools/: DiagnosticTool.py  DiagramPlotter.py  ImagePlot.py  ImageWithChartPlot.py
Cv/Degradation/: FrequencyNoise.py  MotionDeterioration.py  TurbulenceDeterioration.py
Cv/FFT1D/: ComplexDFT1D.py  ComplexiDFT1D.py
Cv/FFT2D/: Common.py  FFT2DUsesFilters.py  FFT2D_Filters.py  FFT2Demo.py  FreqFilters.py
Cv/Filtering/: NoiseGenerator.py  PoissonNoise.py  ShowImage.py
Cv/GrayHistogram/: GrayHistogram.py  IntensityTransformation.py  IntensityTransformation2.py  RGBConvert2Grayscale.py
Cv/ImageRecovery/: ImageDeterioration.py
Cv/Noise/: ImageDeterioration.py  NoiseGenerator.py  PoissonNoise.py  ShowImage.py  TurbulenceDeterioration.py
Cv/Restoration/: LMSFilter.py
Cv/Signals/: ComplexDFT1D.py  ComplexDim1DFT.py  (+4 more)
CvTools/: DataFile.py  DiagramPlotter.py
Neurons/: Test.py  TorchCudaTest.py
Neurons/LTSMCXXFrontier/LTSMCXXFrontier/: CMakeLists.txt  LTSMCXXFrontier.cpp  LTSMCXXFrontier.h  OHVEncoder.cpp  OHVEncoder.h
SKLearn/: DataFrame.py  DataFrameTest.py  GenerateDatasets.py  HelloTensorflow.py  NumpyOpTest.py  SklearnTest.py
Tools/: ChartPlot.py  ImagePlot.py
Utilities/: DiagnoseTool.py  DiagramPlotter.py
(+98 files in other folders)
